--- a/themes/dark/scss/partials/_trailer.scss
+++ b/themes/dark/scss/partials/_trailer.scss
@@ -81,6 +81,6 @@ body.dark .trailer_content h3 {
     margin-left: -34px;
     margin-top: -24px;
     position: absolute;
-    background: url('https://i.ibb.co/j3jcJKv/yt.png') no-repeat;
+    background: url("../../../images/videos/play_youtube.png") no-repeat;
     cursor: pointer;
   }
